@@ -8,7 +8,9 @@ public class SimpleProduct extends Product {
     public SimpleProduct(String name, double price) {
         super(name);
         if (price <= 0) {
-            throw new IllegalArgumentException("Цена продукции не может быть отрицательной или равна нулю.");
+            throw new IllegalArgumentException(
+                    new StringBuilder("Цена продукции не может быть отрицательной или равна нулю.").toString()
+            );
         }
         this.price = price;
     }
@@ -25,15 +27,20 @@ public class SimpleProduct extends Product {
 
     @Override
     public String toString() {
-        return "%s: %.2f ₽".formatted(getName(), getPrice());
+        return new StringBuilder()
+                .append(getName())
+                .append(": ")
+                .append(String.format("%.2f ₽", getPrice()))
+                .toString();
     }
 
     @Override
     public boolean equals(Object o) {
+        if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         if (!super.equals(o)) return false;
         SimpleProduct that = (SimpleProduct) o;
-        return Double.compare(price, that.price) == 0;
+        return Double.compare(that.price, price) == 0;
     }
 
     @Override
